--- a/user-cart/src/main/resources/application.properties
+++ b/user-cart/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-service.message=Hello World
+server.port=1003
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=UserProductDetilas
