--- a/user-profile/src/main/resources/application.properties
+++ b/user-profile/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 ## H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
 # Use H2 DB Driver
-spring.datasource.driverClassName:org.h2.Driver
-## Datasource
-#spring.datasource.url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1
-spring.datasource.url:jdbc:h2:~/test;AUTO_SERVER=TRUE
+#spring.datasource.driverClassName:org.h2.Driver
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.datasource.url:jdbc:h2:~/test;AUTO_SERVER=TRUE
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+server.port=8090
