--- a/mvc-webapp/src/main/resources/application.properties
+++ b/mvc-webapp/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.mvc.view.suffix=.html
 security.user.password=dilip	
 security.user.name=kumar
 
+spring.social.linkedin.app-id=81tp7mvtl3db4n
+spring.social.linkedin.app-secret=LkTlkOcCNsGICLv0
+
+
+
