--- a/feedback-rating/src/main/resources/application.properties
+++ b/feedback-rating/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-service.message=Hello World
+server.port=9090
+cassandra.contactpoints=localhost,127.0.0.1
+cassandra.port=9042
+cassandra.keyspace=javasampleapproach
