--- a/mvc-webapp/src/main/resources/application.properties
+++ b/mvc-webapp/src/main/resources/application.properties
@@ -6,8 +6,8 @@ security.user.password=dilip
 security.user.name=kumar
 
 
-spring.social.linkedin.app-id=81qs4343efmi49
-spring.social.linkedin.app-secret=AtaJvUEL1YmzyMbn
+spring.social.linkedin.app-id=81tp7mvtl3db4n
+spring.social.linkedin.app-secret=LkTlkOcCNsGICLv0
 
 
 
