--- a/user-profile/src/main/resources/application.properties
+++ b/user-profile/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 ## H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-# Use H2 DB Driver
-spring.datasource.driverClassName:org.h2.Driver
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
 
-spring.datasource.url:jdbc:h2:~/test;AUTO_SERVER=TRUE
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+
+#spring.datasource.url:jdbc:h2:~/test;AUTO_SERVER=TRUE
+
+#spring.jpa.hibernate.ddl-auto=create
+
 #server.port=8090
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/db_example
-#spring.datasource.username=springuser
-#spring.datasource.password=ThePassword
+spring.datasource.url=jdbc:mysql://localhost:3306/cfsd
+spring.datasource.username=root
+spring.datasource.password=root
