--- a/order-mgmt/pom.xml
+++ b/order-mgmt/pom.xml
@@ -37,6 +37,11 @@
 						spring-boot-starter-data-jpa
 					</artifactId>
 				</exclusion>
+				<exclusion>
+
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-data-mongodb</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -59,29 +64,12 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-search-engine</artifactId>
-			<version>5.6.1.Final</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.jboss.logging</groupId>
-					<artifactId>jboss-logging</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-search-orm</artifactId>
-			<version>5.6.1.Final</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.jboss.logging</groupId>
-					<artifactId>jboss-logging</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-search-engine</artifactId> 
+			<version>5.6.1.Final</version> <exclusions> <exclusion> <groupId>org.jboss.logging</groupId> 
+			<artifactId>jboss-logging</artifactId> </exclusion> </exclusions> </dependency> 
+			<dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-search-orm</artifactId> 
+			<version>5.6.1.Final</version> <exclusions> <exclusion> <groupId>org.jboss.logging</groupId> 
+			<artifactId>jboss-logging</artifactId> </exclusion> </exclusions> </dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -110,14 +98,14 @@
 		<profile>
 			<id>sonar</id>
 			<activation>
-			<activeByDefault>true</activeByDefault>
+				<activeByDefault>true</activeByDefault>
 			</activation>
 			<properties>
 				<!-- Optional URL to server. Default value is http://localhost:9000 -->
 				<sonar.host.url>
-					 http://localhost:9000
+					http://localhost:9000
 				</sonar.host.url>
 			</properties>
 		</profile>
-	</profiles> 
+	</profiles>
 </project>
