--- a/user-cart/src/main/resources/application.properties
+++ b/user-cart/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=1009
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=13.126.199.137
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=UserProductDetilas
