--- a/order-mgmt/src/main/resources/application.properties
+++ b/order-mgmt/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.port=8000
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.datasource.url:jdbc:postgresql://localhost/viewtest
+spring.datasource.url:jdbc:postgresql://localhost/orderDB
 spring.datasource.username=postgres
 spring.datasource.password=JadooMani@1555
+
