--- a/feedback-rating/src/main/resources/application.properties
+++ b/feedback-rating/src/main/resources/application.properties
@@ -1,4 +1,2 @@
 server.port=9090
-cassandra.contactpoints=localhost,127.0.0.1
-cassandra.port=9042
-cassandra.keyspace=javasampleapproach
+spring.data.cassandra.keyspace-name=testfeedback
