--- a/config-server/src/main/resources/configs/user-profile.properties
+++ b/config-server/src/main/resources/configs/user-profile.properties
@@ -8,7 +8,7 @@
 
 #spring.jpa.hibernate.ddl-auto=create
 
-#server.port=8090
+server.port=9102
 
 spring.datasource.url=jdbc:mysql://localhost:3306/cfsd
 spring.datasource.username=root
