--- a/feedback-rating/pom.xml
+++ b/feedback-rating/pom.xml
@@ -12,10 +12,9 @@
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.9.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<groupId>org.capgemini</groupId>
+		<artifactId>cs-parent</artifactId>
+		<version>0.1.0</version>
 	</parent>
 
 	<properties>
