--- a/mvc-webapp/pom.xml
+++ b/mvc-webapp/pom.xml
@@ -12,11 +12,9 @@
 	<description>Spring mvc online shopping</description>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.8.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
-		
+		<groupId>org.capgemini</groupId>
+		<artifactId>cs-parent</artifactId>
+		<version>0.1.0</version>
 	</parent>
 
 	<properties>
