--- a/user-cart/pom.xml
+++ b/user-cart/pom.xml
@@ -11,10 +11,9 @@
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.8.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<groupId>org.capgemini</groupId>
+		<artifactId>cs-parent</artifactId>
+		<version>0.1.0</version>
 	</parent>
 
 	<properties>
@@ -29,14 +28,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
-			<version>1.5.8.RELEASE</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<version>1.5.8.RELEASE</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.codehaus.sonar/sonar-maven-plugin -->
@@ -65,7 +62,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<version>1.5.8.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
