--- a/user-profile/src/main/resources/application.properties
+++ b/user-profile/src/main/resources/application.properties
@@ -6,10 +6,10 @@
 
 #spring.datasource.url:jdbc:h2:~/test;AUTO_SERVER=TRUE
 
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
-#server.port=8090
+server.port=8090
 
-spring.datasource.url=jdbc:mysql://localhost:3306/cfsd
+spring.datasource.url=jdbc:mysql://localhost:3306/user_profile
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=admin
