--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.profiles.active=native
-spring.cloud.config.server.native.search-locations=classpath:/configs
+#spring.profiles.active=native
+#spring.cloud.config.server.native.search-locations=classpath:/configs
 
-#spring.cloud.config.server.git.uri=https://github.com/preetham1290/bootiful-microservices-config.git
+spring.cloud.config.server.git.uri=https://github.com/preetham1290/cs-parent.git
+spring.cloud.config.server.git.search-paths=configs
 server.port=8888
 eureka.client.enabled=false
