--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,7 +1,12 @@
+################# PROPERTY CONFIGURATION TO PICK FROM LOCAL DIRECTORY #################
 #spring.profiles.active=native
 #spring.cloud.config.server.native.search-locations=classpath:/configs
 
+################# PROPERTY CONFIGURATION TO PICK FROM GIT #################
 spring.cloud.config.server.git.uri=https://github.com/preetham1290/cs-parent.git
+spring.cloud.config.server.git.default-label=cloud
 spring.cloud.config.server.git.search-paths=configs
+
+
 server.port=8888
 eureka.client.enabled=false
