--- a/configs/order-mgmt.properties
+++ b/configs/order-mgmt.properties
@@ -5,7 +5,7 @@ server.port=9100
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.datasource.url:jdbc:postgresql://localhost/orderDB
+spring.datasource.url:jdbc:postgresql://10.246.69.135/orderDB
 spring.datasource.username=postgres
 spring.datasource.password=JadooMani@1555
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
