--- a/configs/user-profile.properties
+++ b/configs/user-profile.properties
@@ -10,6 +10,6 @@
 
 server.port=9102
 
-spring.datasource.url=jdbc:mysql://localhost:3306/cfsd
+spring.datasource.url=jdbc:mysql://10.77.79.80:3306/cfsd
 spring.datasource.username=root
 spring.datasource.password=root
