--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 
 ################# PROPERTY CONFIGURATION TO PICK FROM GIT #################
 spring.cloud.config.server.git.uri=https://github.com/preetham1290/cs-parent.git
-spring.cloud.config.server.git.default-label=cloud
+#spring.cloud.config.server.git.default-label=cloud
 spring.cloud.config.server.git.search-paths=configs
 
 
