--- a/configs/order-mgmt.properties
+++ b/configs/order-mgmt.properties
@@ -1,11 +1,11 @@
 server.port=9100
 
-#spring.datasource.driverClassName:org.postgresql.Driver
+spring.datasource.driverClassName=org.postgresql.Driver
 
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.datasource.url:jdbc:postgresql://10.246.69.135/orderDB
+spring.datasource.url=jdbc:postgresql://172.31.93.27/orderdb
 spring.datasource.username=postgres
-spring.datasource.password=JadooMani@1555
+spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
