--- a/config-server/src/main/resources/configs/feedback-rating.properties
+++ b/config-server/src/main/resources/configs/feedback-rating.properties
@@ -1,2 +1,6 @@
 server.port=9094
 spring.data.cassandra.keyspace-name=testfeedback
+#spring.data.cassandra.contact-points=
+#spring.data.cassandra.port=
+#spring.data.cassandra.password=
+#spring.data.cassandra.username=
