--- a/configs/order-mgmt.properties
+++ b/configs/order-mgmt.properties
@@ -5,7 +5,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:postgresql://172.31.93.27/orderdb
+spring.datasource.url= jdbc:postgresql://localhost:5432/orderDB
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=JadooMani@1555
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
