--- a/feedback-rating/pom.xml
+++ b/feedback-rating/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.cg.cassandra</groupId>
-	<artifactId>Feedback</artifactId>
+	<groupId>com.cg</groupId>
+	<artifactId>feedback-rating</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
