--- a/catalog-mgmt/pom.xml
+++ b/catalog-mgmt/pom.xml
@@ -52,6 +52,13 @@
 			<artifactId>de.flapdoodle.embed.mongo</artifactId>
 			<scope>test</scope>
 		</dependency>
+<dependency>
+    <groupId>org.easymock</groupId>
+    <artifactId>easymock</artifactId>
+    <version>3.1</version>
+    <scope>test</scope>
+</dependency>
+		
 	</dependencies>
 	<build>
 		<plugins>
@@ -63,7 +70,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<skipTests>true</skipTests>
+					<!-- <skipTests>true</skipTests> -->
 				</configuration>
 			</plugin>
 		</plugins>
