--- a/config-server/src/main/resources/configs/mvc-webapp.properties
+++ b/config-server/src/main/resources/configs/mvc-webapp.properties
@@ -6,10 +6,11 @@ security.user.password=dilip
 security.user.name=kumar
 
 
-spring.social.linkedin.app-id=81tp7mvtl3db4n
-spring.social.linkedin.app-secret=LkTlkOcCNsGICLv0
+#spring.social.linkedin.app-id=81tp7mvtl3db4n
+#spring.social.linkedin.app-secret=LkTlkOcCNsGICLv0
 
-
+spring.social.linkedin.app-id=81qs4343efmi49
+spring.social.linkedin.app-secret=AtaJvUEL1YmzyMbn
 
 
 
