--- a/config-server/src/main/resources/configs/order-mgmt.properties
+++ b/config-server/src/main/resources/configs/order-mgmt.properties
@@ -2,10 +2,9 @@ server.port=9100
 
 #spring.datasource.driverClassName:org.postgresql.Driver
 
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.datasource.url:jdbc:postgresql://localhost/orderDB
+spring.datasource.url:jdbc:postgresql://172.31.93.27/orderDB
 spring.datasource.username=postgres
 spring.datasource.password=JadooMani@1555
 
