--- a/config-server/src/main/resources/configs/mvc-webapp.properties
+++ b/config-server/src/main/resources/configs/mvc-webapp.properties
@@ -5,13 +5,14 @@ spring.mvc.view.suffix=.html
 security.user.password=dilip	
 security.user.name=kumar
 
+spring.social.linkedin.app-id=78gsdlhmcc21f2
+spring.social.linkedin.app-secret=iZzSytTp7KafUBnn
 
-#spring.social.linkedin.app-id=81tp7mvtl3db4n
-#spring.social.linkedin.app-secret=LkTlkOcCNsGICLv0
+#spring.social.linkedin.app-id=81qs4343efmi49
+#spring.social.linkedin.app-secret=AtaJvUEL1YmzyMbn
 
-spring.social.linkedin.app-id=81qs4343efmi49
-spring.social.linkedin.app-secret=AtaJvUEL1YmzyMbn
-
+#spring.social.linkedin.app-id=8165ayct3x4bie
+#spring.social.linkedin.app-secret=7C0dxKwe7ICoMlRy
 
 
 
